Hamburger menu and navbars on school pills

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -35,6 +35,15 @@ a:hover .header-profile-image {
 .has-error .help-inline.error-text {
   display: inline;
 }
+
+.page-header{
+    background-color: whitesmoke;
+    padding-top: 8px;
+}
+
+.page-header h1{
+    padding-left: 65px;
+}
 /*
 
 .navbar-custom {
