--- a/modules/schools/client/views/form-school.client.view.html
+++ b/modules/schools/client/views/form-school.client.view.html
@@ -63,9 +63,122 @@
     </fieldset>
     </form>
   </div>
-  <div role="tabpanel" class="tab-pane" id="schoolcalendar">School Calendar</div>
-  <div role="tabpanel" class="tab-pane" id="teachers">Teachers <button class="btn btn-primary" ng-click="vm.create('lg');">Add New</button>
+  <div role="tabpanel" class="tab-pane" id="schoolcalendar">
+                  <nav class="navbar navbar-default" style="margin-top: 10px; margin-bottom: 15px;">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Calendar Events - {{vm.school.schoolevents ? vm.school.schoolevents.length : 0}}</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#" ng-click="vm.createSchoolEvent('lg');">Add New <span class="sr-only">(current)</span></a></li>   
         
+      </ul>
+      <!--<form class="navbar-form navbar-left">
+        
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>-->
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+      
+      <div>
+        <table st-table="rowCollection" class="table table-striped">
+	<thead>
+	<tr>
+		<th>Title</th>
+		<th>last name</th>
+		<th>Age</th>
+		<th>Actions</th>
+		
+	</tr>
+	</thead>
+	<tbody>
+	<tr ng-repeat="row in vm.school.schoolevents">
+		<td>{{row.title}}</td>
+		<td>{{row.startdate}}</td>
+		<td>{{row.enddate}}</td>
+		<td>
+           
+            <button class="btn btn-primary" ng-click="vm.schoolevent=row;vm.openSchoolEventModal('lg', row);">View</button><button style="padding-right:10px;" class="btn btn-danger" ng-click="vm.schoolevent=row;vm.confirmDeleteSchoolEvent('md',row);">Delete</button>
+               </td>		
+	</tr>
+	</tbody>
+</table>
+        
+        </div>
+      
+        </div>
+  <div role="tabpanel" class="tab-pane" id="teachers">
+            
+      <nav class="navbar navbar-default" style="margin-top: 10px; margin-bottom: 15px;">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Teachers - {{vm.school.teachers ? vm.school.teachers.length : 0}}</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#" ng-click="vm.create('lg');">Add New <span class="sr-only">(current)</span></a></li>   
+        
+      </ul>
+      <!--<form class="navbar-form navbar-left">
+        
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>-->
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+      
               <div>
         <table st-table="rowCollection" class="table table-striped">
 	<thead>
@@ -96,7 +209,51 @@
 
   <div role="tabpanel" class="tab-pane" id="classes">
 
-     Classes:{{vm.school.schoolclasses ? vm.school.schoolclasses.length : 0}} <button class="btn btn-primary" ng-click="vm.createSchoolClass('lg');">Add New</button> 
+     <!--Classes:{{vm.school.schoolclasses ? vm.school.schoolclasses.length : 0}} <button class="btn btn-primary" ng-click="vm.createSchoolClass('lg');">Add New</button> -->
+      
+      <nav class="navbar navbar-default" style="margin-top: 10px; margin-bottom: 15px;">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Classes - {{vm.school.schoolclasses ? vm.school.schoolclasses.length : 0}}</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#" ng-click="vm.createSchoolClass('lg');">Add New <span class="sr-only">(current)</span></a></li>   
+        
+      </ul>
+      <!--<form class="navbar-form navbar-left">
+        
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>-->
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+      
                   <div>
         <table st-table="rowCollection" class="table table-striped">
 	<thead>
@@ -125,8 +282,49 @@
 
   </div>
   <div role="tabpanel" class="tab-pane" id="students">
-      Students {{vm.school.schoolclasses ? vm.school.schoolclasses.length : 0}} <button class="btn btn-primary" ng-click="vm.createStudent('lg');">Add New</button> 
-      
+      <!--Students {{vm.school.schoolclasses ? vm.school.schoolclasses.length : 0}} <button class="btn btn-primary" ng-click="vm.createStudent('lg');">Add New</button> -->
+            <nav class="navbar navbar-default" style="margin-top: 10px; margin-bottom: 15px;">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Students - {{vm.school.students ? vm.school.students.length : 0}}</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#" ng-click="vm.createStudent('lg');">Add New <span class="sr-only">(current)</span></a></li>   
+        
+      </ul>
+      <!--<form class="navbar-form navbar-left">
+        
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>-->
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
       <div>
         <table st-table="rowCollection" class="table table-striped">
 	<thead>
@@ -158,8 +356,51 @@
       
         </div>
  <div role="tabpanel" class="tab-pane" id="schoolsubjects">
-     Subjects {{vm.school.subjects ? vm.school.subjects.length : 0}} <button class="btn btn-primary" ng-click="vm.createSubject('lg');">Add New</button> 
-      
+     <!--Subjects {{vm.school.subjects ? vm.school.subjects.length : 0}} <button class="btn btn-primary" ng-click="vm.createSubject('lg');">Add New</button> -->
+     
+                 <nav class="navbar navbar-default" style="margin-top: 10px; margin-bottom: 15px;">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Subjects - {{vm.school.subjects ? vm.school.subjects.length : 0}}</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#" ng-click="vm.createSubject('lg');">Add New <span class="sr-only">(current)</span></a></li>   
+        
+      </ul>
+      <!--<form class="navbar-form navbar-left">
+        
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>-->
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+     
       <div>
         <table st-table="rowCollection" class="table table-striped">
 	<thead>
