--- a/modules/schools/client/views/modal-teacher.client.view.html
+++ b/modules/schools/client/views/modal-teacher.client.view.html
@@ -10,7 +10,7 @@
     </ul>
                     
                     <div class="tab-content">
-      <div role="tabpanel" class="tab-pane active" id="teacherGeneraldetails">
+      <div role="presentation" class="tab-pane active" id="teacherGeneraldetails" data-toggle="tab">
                     
                     <div class="row" style="margin-bottom: 5px;">
                         <label class="col-md-2"> Name</label>
@@ -28,12 +28,12 @@
                             <input class="form-control" type="text" ng-model="vm.teacher.age" id="age" placeholder="Age" /></div>
                     </div>
 
-                        </div>
+                         </div>
                         
-                        <div role="tabpanel" class="tab-pane active" id="teacherClasses">
-                           Teachers Classes 
+                        <div role="presentation" class="tab-pane" id="teacherClasses">
+                            <div>Teachers Classes </div>
+                           
                         </div>
-                        
                     </div>
                 </div>
             </div>
