--- a/modules/schools/client/views/modal-student.client.view.html
+++ b/modules/schools/client/views/modal-student.client.view.html
@@ -45,7 +45,7 @@
                         <label class="col-md-2"> Current Class</label>
                         <div class="col-md-4">
                             <!--<input class="form-control" type="text" ng-model="vm.student.class" id="picture" placeholder="picture" />-->
-                         <select class="form-control" name="singleSelect" id="currentclass" ng-model="vm.student.currentclass" >
+                         <select class="form-control" id="currentclass" ng-model="vm.student.currentclass" >
       <!--
 ng-options="class as class.name for class in vm.school.schoolclasses track by class._id"
 -->
