--- a/modules/core/client/views/sidebar.client.view.html
+++ b/modules/core/client/views/sidebar.client.view.html
@@ -2,9 +2,25 @@
      <nav class="collapse navbar-collapse " collapse="!isCollapsed" role="navigation">
     <ul class="nav nav-pills nav-stacked " ng-if="menus.shouldRender(authentication.user);">
         <li>
-            <div style="margin-top:10px; margin-bottom:10px;">
-        <img ng-src="{{authentication.user.profileImageURL}}" alt="{{authentication.user.displayName}}" class="header-profile-image" />
-                <span style="font-size:13px"> Welcome {{authentication.user.displayName}}</span>
+            <div class="profile-info row" >
+                <div class="profile-image col-xs-4">
+                <a href="#">
+                    <img ng-src="{{authentication.user.profileImageURL}}" alt="{{authentication.user.displayName}}" class="img-responsive img-circle" />
+                    </a>
+                </div>
+        
+                <div class="profile-details col-xs-8">
+                <h3>
+                    <a href="#">
+                        {{authentication.user.displayName}}
+                    </a>
+                    <span class="profile-status online"></span>
+                    </h3>
+                    <p class="profile-title">Web Developer</p>
+                
+                </div>
+                
+                <span style="font-size:13px"> </span>
                 </div>
         </li>
       <li ng-repeat="item in menus.items | orderBy: 'position'" ng-if="item.shouldRender(authentication.user);" ng-switch="item.type" ng-class="{ active: $state.includes(item.state), dropdown: item.type === 'dropdown' }" class="{{item.class}}" dropdown="item.type === 'dropdown'">
