--- a/modules/schools/client/views/modal-schoolevent.client.view.html
+++ b/modules/schools/client/views/modal-schoolevent.client.view.html
@@ -18,15 +18,21 @@
                     <div class="row" style="margin-bottom: 5px;">
                         <label class="col-md-2"> Start Date</label>
                         <div class="col-md-4">
-                            <input class="form-control" type="text" ng-model="vm.schoolevent.startdate" id="startdate" placeholder="startdate" /></div>
+                             <p class="input-group">
+                            <input class="form-control" type="text" ng-model="vm.schoolevent.startdate" id="startdate" placeholder="startdate"
+                                   datepicker-popup="{{vm.format}}"  is-open="vm.startDatePopup.opened" datepicker-options="vm.dateOptions"  close-text="Close" ng-required="true" date-disabled="vm.disabled(date, mode)" min-date="vm.minDate" max-date="vm.maxDate"/>
+                        <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="$event.preventDefault(); $event.stopPropagation();vm.openStartDatePopup();"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span></p>
+                        </div>
                     </div>
                     <div class="row" style="margin-bottom: 5px;">
                         <label class="col-md-2"> End Date</label>
                         <div class="col-md-4">
                             <p class="input-group">
-                            <input class="form-control" type="text" ng-model="vm.schoolevent.enddate" id="enddate" placeholder="enddate" uib-datepicker-popup="{{vm.format}}"  is-open="vm.startDatePopup.opened" datepicker-options="vm.dateOptions"  close-text="Close" ng-required="true"/>
+                            <input class="form-control" type="text" ng-model="vm.schoolevent.enddate" id="enddate" placeholder="enddate" datepicker-popup="{{vm.format}}"  is-open="vm.endDatePopup.opened" datepicker-options="vm.dateOptions"  close-text="Close" ng-required="true" date-disabled="vm.disabled(date, mode)" min-date="vm.minDate" max-date="vm.maxDate"/>
                             <span class="input-group-btn">
-            <button type="button" class="btn btn-default" ng-click="vm.openEndDatePopup()"><i class="glyphicon glyphicon-calendar"></i></button>
+            <button type="button" class="btn btn-default" ng-click="$event.preventDefault(); $event.stopPropagation();vm.openEndDatePopup();"><i class="glyphicon glyphicon-calendar"></i></button>
           </span></p>
                         </div>
                     </div>
