--- a/modules/teachers/client/views/view-myteacher.client.view.html
+++ b/modules/teachers/client/views/view-myteacher.client.view.html
@@ -12,6 +12,14 @@
       <i class="glyphicon glyphicon-trash"></i>
     </a>
   </div>
+    Teachers need to see I am a teacher at {{vm.school.name}} My Name is {{vm.teacher.name}}
+    <ul>
+    <li>Their classes {{vm.teacher.classes.length}}</li>
+        <li>Attendance Registers</li>
+        <li>Manage Homeworks</li>
+        <li>Manage coursework</li>
+    </ul>
+    
   <small>
     <em class="text-muted">
       Posted on
