--- a/modules/schools/client/views/modal-schoolclass.client.view.html
+++ b/modules/schools/client/views/modal-schoolclass.client.view.html
@@ -39,7 +39,7 @@
           </div>  </div>       
                         </div>
                         
-                        <div role="tabpanel" class="tab-pane active" id="subjects">
+                        <div role="tabpanel" class="tab-pane" id="subjects">
                             <div class="col-md-8">
                             
                 <form editable-form name="tableform" onaftersave="saveTable()" oncancel="cancel()">            
@@ -53,8 +53,8 @@
       <tr ng-repeat="subject in vm.schoolclass.subjects ">
         <td>
           <!-- editable username (text with validation) -->
-          <span editable-select="subjcect" e-form="tableform" e-ng-options="s.id as s.name for s in vm.subjects">
-            {{ subject.name }}
+          <span editable-select="subject.subject" e-form="tableform" e-ng-options="s._id as s.name for s in vm.school.subjects">
+            {{ vm.showSubjectName(subject.subject) }}
           </span>
         </td>
         <td>
