--- a/modules/schools/client/views/modal-student.client.view.html
+++ b/modules/schools/client/views/modal-student.client.view.html
@@ -45,14 +45,25 @@
                         <label class="col-md-2"> Current Class</label>
                         <div class="col-md-4">
                             <!--<input class="form-control" type="text" ng-model="vm.student.class" id="picture" placeholder="picture" />-->
-                         <select class="form-control" id="currentclass" ng-model="vm.student.currentclass" >
-      <!--
-ng-options="class as class.name for class in vm.school.schoolclasses track by class._id"
--->
-                             <option ng-repeat="option in vm.school.schoolclasses" ng-value="option._id">{{option.name}}</option>
+                         <select class="form-control" id="currentclass" ng-model="vm.student.currentclass" ng-options=" class._id as class.name for class in vm.school.schoolclasses"  >
+                             
+                             
+     
+
+
+                              <!--<option ng-repeat="option in vm.school.schoolclasses" ng-value="option._id">{{option.name}}</option>-->
     </select>
+                            
+                            
+                            
                          </div>
                     </div>
+                    <div class="row" style="margin-bottom: 5px;">
+                    <label class="col-md-2"> Class Name  {{vm.student.currentclass.name}}</label>
+                       
+                    
+                    </div>
+                    
                 </div>
             </div>
             <div class="modal-footer">
