--- a/modules/schools/client/views/modal-teacher.client.view.html
+++ b/modules/schools/client/views/modal-teacher.client.view.html
@@ -22,18 +22,66 @@
                         <div class="col-md-4">
                             <input class="form-control" type="text" ng-model="vm.teacher.lastname" id="lastname" placeholder="last Name" /></div>
                     </div>
-                    <div class="row" style="margin-bottom: 5px;">
-                        <label class="col-md-2"> Age</label>
-                        <div class="col-md-4">
-                            <input class="form-control" type="text" ng-model="vm.teacher.age" id="age" placeholder="Age" /></div>
-                    </div>
+                    
 
                          </div>
                         
                         <div role="presentation" class="tab-pane" id="teacherClasses">
-                            <div>Teachers Classes </div>
+                            
                            
-                        </div>
+                            <div class="row">
+                            <label class="col-md-2">Class</label>
+                            <div class="col-md-4">
+                                <!--<input class="form-control" type="text" ng-model="vm.student.class" id="picture" placeholder="picture" />-->
+                                <select class="form-control" id="currentclass" ng-model="vm.selectedclass" ng-options=" class._id as class.name for class in vm.school.schoolclasses">
+                                                        </select>
+                                
+                            </div>
+                                <div class="col-md-2">
+                                    <button class="btn btn-success" ng-click="vm.add()">Add</button>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                        <ul>
+                                            <li ng-repeat="class in vm.teacher.classes" >
+                                                {{class}}
+                                            <button class="btn btn-danger" ng-click="vm.remove($index)"> Remove</button>
+                                                </li>
+                                        </ul>
+                                    </div>
+                                <div class="col-md-4">
+                                
+                                <table class="table table-bordered table-hover table-condensed">
+      <tr style="font-weight: bold">
+        <td >Subject Name</td>
+        <td >Level</td>
+        <td >Action</td>        
+      </tr>
+      <tr ng-repeat="subject in vm.schoolclass.subjects ">
+        <td>
+          <!-- editable username (text with validation) -->
+          <span editable-select="subject.subject" e-form="tableform" e-ng-options="s._id as s.name for s in vm.school.subjects">
+            {{ vm.showSubjectName(subject.subject) }}
+          </span>
+        </td>
+        <td>
+          <!-- editable status (select-local) 
+          <span editable-text="answer.answertext" e-form="tableform" >-->
+            {{ subject.level || 'empty'}}
+          <!--</span>-->
+        </td>
+        
+        <td><button type="button" ng-show="tableform.$visible" ng-click="deleteSubject(subject.id)" class="btn btn-danger pull-right">Delete</button></td>
+      </tr>
+    </table>
+                                
+                                
+                                
+                                
+                                </div>
+</div>
+                            </div>
                     </div>
                 </div>
             </div>
