--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -28,6 +28,16 @@
             </div>
           </div>
         </div>
+          <div class="form-group" show-errors>
+          <label for="cellnumber">School</label>
+          <!--<input type="text" id="school" name="school" class="form-control" ng-model="user.school" placeholder="school" lowercase required>-->
+              <select class="form-control" id="school" ng-model="user.school" ng-options="school._id as school.name for school in schools"  ></select>
+              
+          <div ng-messages="userForm.school.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">school Number is required.</p>
+          </div>
+        </div>
+          
         <div class="form-group">
           <input type="submit" value="Update" class="btn btn-default">
         </div>
