--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,4 +1,4 @@
-<div class="container-fluid navbar-custom" ng-controller="HeaderController">
+<div  class="container-fluid navbar-custom" ng-controller="HeaderController">
   <div class="navbar-header  ">
     <button class="navbar-toggle" type="button" ng-click="toggleCollapsibleMenu()">
       <span class="sr-only">Toggle navigation</span>
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
     </button>
       
-      <button style=" outline: none;" id="toggleMenuButton" class="hamburger hamburger--slider is-active" type="button" ng-click="toggleMenu()" ng-show="authentication.user">
+      <button style=" outline: none;" id="toggleMenuButton" class="hamburger hamburger--slider is-active pull-left" type="button" ng-click="toggleMenu()" ng-show="authentication.user">
               <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
               </span>
