--- a/modules/guardians/client/views/view-myguardian.client.view.html
+++ b/modules/guardians/client/views/view-myguardian.client.view.html
@@ -8,9 +8,9 @@
        data-ui-sref="guardians.edit({ guardianId: vm.guardian._id })">
       <i class="glyphicon glyphicon-edit"></i>
     </a>
-    <a class="btn btn-primary" data-ng-click="vm.remove()">
+    <button style="background: none; border: 2px solid black; color: red; outline: none" class="btn btn-primary" data-ng-click="vm.remove()">
       <i class="glyphicon glyphicon-trash"></i>
-    </a>
+    </button>
   </div>
   <small>
     <em class="text-muted">
