--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,6 +1,6 @@
-<section ng-controller="HomeController">
+<section class="container-fluid" style="background-image: linear-gradient(to bottom,#563d7c 0,#6f5499 100%); height:100%;width:100%;margin-top:50px;" ng-controller="HomeController">
   
-  <div class="jumbotron text-center">
+  <div style="" class="jumbotron text-center"> <!--url('./modules/core/client/img/bg/background.jpg');-->
     <div class="row">
       <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
         <img alt="MEAN.JS" class="img-responsive text-center" src="modules/core/client/img/brand/logo.png" />
