Redirection of Students from the school object

--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -38,7 +38,7 @@
 <body class="ng-cloak">
   <header style="background-color: transparent;" ng-include="'/modules/core/client/views/header.client.view.html'" class="navbar navbar-fixed-top"></header>
   <section class="content">
-    <section class="container-fluid">
+    <section > <!--class="container-fluid"-->
       <div id="wrapper" ng-controller="SidebarController" ng-class="{'toggled': authentication.user ==''}">
 
     <!-- Sidebar -->
@@ -55,8 +55,8 @@
 
     <!-- Page Content -->
     <div id="page-content-wrapper">
-      <div class="container-fluid">
-        <div class="row">
+      <div > <!--class="container-fluid"-->
+        <div>  <!--class="row"-->
 
             <!--
             <h1>Simple Sidebar</h1>
