--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1,13 +1,23 @@
 body, html {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     width: 100%;
     height: 100%;
-    -webkit-font-smoothing: antialiased;
+    /*-webkit-font-smoothing: antialiased;*/
 }
 .content {
   /*margin-top: 50px;*/
 }
+/*.container { 
+  padding: 0px;
+}
+
+.container-fluid { 
+  padding: 0px;
+}
+.row{
+    padding: 0px;
+}*/
 .undecorated-link:hover {
   text-decoration: none;
 }
@@ -174,7 +184,7 @@ a:hover .header-profile-image {
 }
 
 #wrapper {
-  padding-left: 0;
+ 
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -192,7 +202,7 @@ a:hover .header-profile-image {
   left: 250px;
   width: 0;
   height: 100%;
-  margin-left: -250px;
+  margin-left: -254px;
   overflow-y: auto;
   background: #fff;
   -webkit-transition: all 0.5s ease;
@@ -209,16 +219,37 @@ a:hover .header-profile-image {
 
 #page-content-wrapper {
   width: 100%;
-  position: absolute;
-  /*padding: 15px;*/
+  /*position: absolute;
+  padding: 15px;*/
   background-color: #fff;
 }
 
 #wrapper.toggled #page-content-wrapper {
-  position: absolute;
+  /*position: absolute;*/
   margin-right: -250px;
 }
 
+.intro-text {
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+
+ .intro-text .intro-lead-in {
+    margin-bottom: 25px;
+    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 22px;
+    font-style: italic;
+    line-height: 22px;
+}
+
+ .intro-text .intro-heading {
+    margin-bottom: 25px;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 50px;
+}
 
 /* Sidebar Styles */
 /*
@@ -342,6 +373,10 @@ a:hover .header-profile-image {
     width: 250px;
   }
 
+  #sidebar-wrapper .navbar {
+    border: none;
+  }
+    
   #wrapper.toggled #sidebar-wrapper {
     width: 0px;
   }
