--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,6 +1,42 @@
-<section class="container-fluid" style="background-image: linear-gradient(to bottom,#563d7c 0,#6f5499 100%); height:100%;width:100%;margin-top:50px;" ng-controller="HomeController">
+<section >
   
-  <div style="" class="jumbotron text-center"> <!--url('./modules/core/client/img/bg/background.jpg');-->
+    <div style="background-image: url('./modules/core/client/img/bg/school-bg.png'); height: 100vh; width: 100vw; -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover; text-align: center;
+    color: #fff;">
+    
+       <!-- <div class="container">
+            <div class="intro-text">
+                <div class="intro-lead-in">Welcome To Our Studio!</div>
+                <div class="intro-heading">It's Nice To Meet You</div>
+                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+            </div>
+        </div>-->
+        <div class="col-md-12">
+        
+            <div class="col-md-6">
+            
+            </div>
+            <div style="padding-top:20vh;" class="col-md-6">
+            
+                <div style="background-color: transparent;" ng-include="'/modules/users/client/views/authentication/signin.client.view.html'" ></div>
+            </div>
+        
+        </div>
+        
+    
+    </div>
+    <div style=" height: 50vh; width: 100vw; text-align: center;background-color: #d9edee; color:#282f39;">
+        
+   Who we are 
+   
+    </div>
+    <div style=" height: 50vh; width: 100vw; text-align: center; background-color: #282f39; color:#d9edee">
+    
+    What we do
+    </div>
+<!--  <div style="" class="jumbotron text-center"> 
     <div class="row">
       <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
         <img alt="MEAN.JS" class="img-responsive text-center" src="modules/core/client/img/brand/logo.png" />
@@ -81,7 +117,7 @@
     </p>
   </div>
   <br>Enjoy &amp; Keep Us Updated,
-  <br>The MEAN.JS Team.
+  <br>The MEAN.JS Team.-->
   
 
 
