--- a/modules/students/client/views/form-student.client.view.html
+++ b/modules/students/client/views/form-student.client.view.html
@@ -1,3 +1,4 @@
+<!--
 <section>
   <div class="page-header">
     <h1>{{vm.student._id ? 'Edit Student' : 'New Student'}}</h1>
@@ -22,3 +23,98 @@
     </form>
   </div>
 </section>
+-->
+
+ <div class="modal-header">
+  
+    <h3 class="modal-title" id="modal-title">{{vm.student._id ? 'Edit Student' : 'New Student'}}</h3>
+  
+</div>
+
+  <div class="modal-body" id="modal-body">
+    <!--<form name="vm.form.studentForm" class="form-horizontal" ng-submit="vm.save(vm.form.studentForm.$valid)" novalidate>
+      <fieldset>
+        <div class="form-group" show-errors>
+          <label class="control-label" for="name">Name</label>
+          <input name="name" type="text" ng-model="vm.student.name" id="name" class="form-control" placeholder="Name" required>
+          <div ng-messages="vm.form.studentForm.name.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Student name is required.</p>
+          </div>
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-default">{{vm.student._id ? 'Update' : 'Create'}}</button>
+        </div>
+        <div ng-show="vm.error" class="text-danger">
+          <strong ng-bind="vm.error"></strong>
+        </div>
+      </fieldset>
+    </form>-->
+      
+                      <div class="container">
+
+                    <div class="row" style="margin-bottom: 5px;">
+                        <label class="col-md-2"> Name</label>
+                        <div class="col-md-4">
+                            <input class="form-control" type="text" ng-model="vm.student.name" id="name" placeholder="Name" /></div>
+                    </div>
+                    <div class="row" style="margin-bottom: 5px;">
+                        <label class="col-md-2"> Surname</label>
+                        <div class="col-md-4">
+                            <input class="form-control" type="text" ng-model="vm.student.surname" id="surname" placeholder="surname" /></div>
+                    </div>
+                    <div class="row" style="margin-bottom: 5px;">
+                        <label class="col-md-2"> Home Address</label>
+                        <div class="col-md-4">
+                            <input class="form-control" type="text" ng-model="vm.student.homeaddress" id="homeaddress" placeholder="homeaddress" /></div>
+                    </div>
+                    <div class="row" style="margin-bottom: 5px;">
+                        <label class="col-md-2"> Student Number</label>
+                        <div class="col-md-4">
+                            <input class="form-control" type="text" ng-model="vm.student.studentnumber" id="studentnumber" placeholder="studentnumber" /></div>
+                    </div>
+
+                    <div class="row" style="margin-bottom: 5px;">
+                        <label class="col-md-2"> Gender</label>
+                        <div class="col-md-4">
+                            <input class="form-control" type="text" ng-model="vm.student.gender" id="gender" placeholder="gender" /></div>
+                    </div>
+                    <div class="row" style="margin-bottom: 5px;">
+                        <label class="col-md-2"> picture</label>
+                        <div class="col-md-4">
+                            <input class="form-control" type="text" ng-model="vm.student.c" id="picture" placeholder="picture" /></div>
+                    </div>
+                     <div class="row" style="margin-bottom: 5px;">
+                        <label class="col-md-2"> Current Class</label>
+                        <div class="col-md-4">
+                            <!--<input class="form-control" type="text" ng-model="vm.student.class" id="picture" placeholder="picture" />-->
+                         <!--<select class="form-control" id="currentclass" ng-model="vm.student.currentclass" ng-options=" class._id as class.name for class in vm.school.schoolclasses"  >-->
+                             
+                             
+     
+
+
+                              <!--<option ng-repeat="option in vm.school.schoolclasses" ng-value="option._id">{{option.name}}</option>-->
+    </select>
+                            
+                            
+                            
+                         </div>
+                    </div>
+                    <div class="row" style="margin-bottom: 5px;">
+                    <label class="col-md-2"> Class Name  {{vm.student.currentclass.name}}</label>
+                       
+                    
+                    </div>
+                    
+                </div>
+      
+  </div>
+
+<div class="modal-footer">
+                
+                <button class="btn btn-primary" type="button" ng-click="vm.save()">{{vm.student._id ? 'Update': 'Save'}}</button>
+                <!--<button class="btn btn-primary" type="button" ng-click="vm.ok()">OK</button>-->
+                <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancel</button>
+            </div>
+
+
