--- a/modules/schools/client/views/form-school.client.view.html
+++ b/modules/schools/client/views/form-school.client.view.html
@@ -154,13 +154,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Teachers - {{vm.school.teachers ? vm.school.teachers.length : 0}}</a>
+      <a class="navbar-brand" href="#">Teachers - {{vm.schoolsTeachers ? vm.schoolsTeachers.length : 0}}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#" ng-click="vm.create('lg');">Add New <span class="sr-only">(current)</span></a></li>   
+        <li class="active"><a href="#" ng-click="vm.createTeacher('lg');">Add New <span class="sr-only">(current)</span></a></li>   
         
       </ul>
       <!--<form class="navbar-form navbar-left">
@@ -199,13 +199,13 @@
 	</tr>
 	</thead>
 	<tbody>
-	<tr ng-repeat="row in vm.school.teachers">
+	<tr ng-repeat="row in vm.schoolsTeachers">
 		<td>{{row.name}}</td>
 		<td>{{row.lastname}}</td>
 		<td>{{row.age}}</td>
 		<td>
            
-            <button class="btn btn-primary" ng-click="vm.teacher=row;vm.open('lg', row);">View</button><button style="padding-right:10px;" class="btn btn-danger" ng-click="vm.teacher=row;vm.confirmdelete('md',row);">Delete</button>
+            <button class="btn btn-primary" ng-click="vm.teacher=row;vm.openTeacherModal('lg', row);">View</button><button style="padding-right:10px;" class="btn btn-danger" ng-click="vm.teacher=row;vm.removeTeacher();">Delete</button>
                </td>		
 	</tr>
 	</tbody>
@@ -301,7 +301,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Students - {{vm.school.students ? vm.school.students.length : 0}}</a>
+      <a class="navbar-brand" href="#">Students - {{vm.schoolstudents ? vm.schoolstudents.length : 0}}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -345,13 +345,13 @@
 	</tr>
 	</thead>
 	<tbody>
-	<tr ng-repeat="row in vm.school.students">
+	<tr ng-repeat="row in vm.schoolstudents">
 		<td>{{row.name}}</td>
 		<td>{{row.surname}}</td>
 		<td>{{row.studentnumber}}</td>
 		<td>
            
-            <button class="btn btn-primary" ng-click="vm.student=row;vm.openStudentModal('lg', row);">View</button><button style="padding-right:10px;" class="btn btn-danger" ng-click="vm.student=row;vm.confirmDeleteStudent('md',row);">Delete</button>
+            <button class="btn btn-primary" ng-click="vm.student=row;vm.openStudentModal('lg', row);">View</button><button style="padding-right:10px;" class="btn btn-danger" ng-click="vm.student=row;vm.removeStudent();">Delete</button>
                </td>		
 	</tr>
 	</tbody>
